unpackaged/main/default/objects/Opportunity_Plan__c/Opportunity_Plan__c.object-meta.xml
<CustomObject>
    <label>Opportunity Plan</label>
    <nameField>
        <label>Opportunity Plan Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Opportunity Plan</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>