unpackaged/main/default/objects/Opportunity_Plan__c/fields/Average_Total_Value_per_Home__c.field-meta.xml
<CustomField>
    <fullName>Average_Total_Value_per_Home__c</fullName>
    <label>Average Total Value per Home</label>
    <length>100</length>
    <type>Text</type>
</CustomField>