unpackaged/main/default/objects/Opportunity_Plan__c/fields/Current_Tile_Spend__c.field-meta.xml
<CustomField>
    <fullName>Current_Tile_Spend__c</fullName>
    <label>Current Tile Spend</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>