unpackaged/main/default/objects/Opportunity_Plan__c/fields/Current_Tile_Supplier__c.field-meta.xml
<CustomField>
    <fullName>Current_Tile_Supplier__c</fullName>
    <label>Current Tile Supplier</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Beaumont Tiles</fullName>
            </value>
            <value>
                <fullName>Other tile provider/s</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>