unpackaged/main/default/objects/Opportunity_Plan__c/fields/How_do_you_transact__c.field-meta.xml
<CustomField>
    <fullName>How_do_you_transact__c</fullName>
    <label>How do you transact?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Tender each job</fullName>
            </value>
            <value>
                <fullName>Supply agreement</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>