unpackaged/main/default/objects/Opportunity_Plan__c/fields/Key_contact__c.field-meta.xml
<CustomField>
    <fullName>Key_contact__c</fullName>
    <label>Key contact</label>
    <length>100</length>
    <type>Text</type>
</CustomField>