unpackaged/main/default/objects/Opportunity_Plan__c/fields/Loss_Reason__c.field-meta.xml
<CustomField>
    <fullName>Loss_Reason__c</fullName>
    <label>Loss Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Stock availability</fullName>
            </value>
            <value>
                <fullName>Relationship with decision maker</fullName>
            </value>
            <value>
                <fullName>Price</fullName>
            </value>
            <value>
                <fullName>Unique / specified product</fullName>
            </value>
            <value>
                <fullName>Supply on-time and in-full confidence</fullName>
            </value>
            <value>
                <fullName>Strength of overall Value Proposition</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>