unpackaged/main/default/objects/Opportunity_Plan__c/fields/Loss_Reason_Comments__c.field-meta.xml
<CustomField>
    <fullName>Loss_Reason_Comments__c</fullName>
    <label>Loss Reason Comments</label>
    <length>100</length>
    <type>Text</type>
</CustomField>