unpackaged/main/default/objects/Opportunity_Plan__c/fields/No_of_Builds_Per_Year__c.field-meta.xml
<CustomField>
    <fullName>No_of_Builds_Per_Year__c</fullName>
    <label>No. of Builds Per Year?</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>