unpackaged/main/default/objects/Opportunity_Plan__c/fields/Power_Pass_Account_Number__c.field-meta.xml
<CustomField>
    <fullName>Power_Pass_Account_Number__c</fullName>
    <formula>Account__r.Power_Pass_Account_Number__c</formula>
    <label>Power Pass Account Number</label>
    <type>Text</type>
</CustomField>