unpackaged/main/default/objects/Opportunity_Plan__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Initial Discussion</fullName>
                <default>true</default>
                <label>Initial Discussion</label>
            </value>
            <value>
                <fullName>Joint Discussion</fullName>
            </value>
            <value>
                <fullName>Closed - Lost</fullName>
            </value>
            <value>
                <fullName>Closed - Won</fullName>
            </value>
            <value>
                <fullName>Closed (Won or Lost)</fullName>
                <isActive>false</isActive>
                <label>Closed (Won or Lost)</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>