unpackaged/main/default/objects/Opportunity_Plan__c/fields/Which_store__c.field-meta.xml
<CustomField>
    <fullName>Which_store__c</fullName>
    <label>Which store?</label>
    <length>100</length>
    <type>Text</type>
</CustomField>