unpackaged/main/default/objects/Opportunity_Plan__c/fields/Who_is_the_current_supplier__c.field-meta.xml
<CustomField>
    <fullName>Who_is_the_current_supplier__c</fullName>
    <label>Who is the current supplier?</label>
    <length>100</length>
    <type>Text</type>
</CustomField>