unpackaged/main/default/objects/Opportunity_Plan__c/fields/Why_are_they_the_current_supplier__c.field-meta.xml
<CustomField>
    <fullName>Why_are_they_the_current_supplier__c</fullName>
    <label>Why are they the current supplier?</label>
    <length>100</length>
    <type>Text</type>
</CustomField>