unpackaged/main/default/objects/Opportunity_Plan__c/validationRules/First_Mandatory_fields.validationRule-meta.xml
<ValidationRule>
    <fullName>First_Mandatory_fields</fullName>
    <active>false</active>
    <description>Mandatory fields based on picklist values.</description>
    <errorConditionFormula>AND(
    ISPICKVAL(Current_Tile_Supplier__c , &#39;Beaumont Tiles&#39;),
    ISBLANK(Which_store__c),
    ISBLANK(Key_contact__c)
)</errorConditionFormula>
    <errorDisplayField>Current_Tile_Supplier__c</errorDisplayField>
    <errorMessage>Current Tile Supplier field value is Beaumont Tiles, Please populate Which store or Key contact fields.</errorMessage>
</ValidationRule>