unpackaged/main/default/objects/Opportunity_Plan__c/validationRules/Second_Mandatory_Fields.validationRule-meta.xml
<ValidationRule>
    <fullName>Second_Mandatory_Fields</fullName>
    <active>false</active>
    <description>Mandatory Fields based in picklist value</description>
    <errorConditionFormula>AND(
ISPICKVAL(Current_Tile_Supplier__c , &#39;Other tile provider/s&#39;),
ISBLANK( Who_is_the_current_supplier__c ),
ISBLANK( Why_are_they_the_current_supplier__c )
)</errorConditionFormula>
    <errorDisplayField>Current_Tile_Supplier__c</errorDisplayField>
    <errorMessage>Current Tile Supplier field value is Other tile provider/s, Please populate Who is the current supplier or Why are they the current supplier fields.</errorMessage>
</ValidationRule>